# ufox

./: .env.example  .gitignore  Cargo.toml  README.md  llm-sdk-prompt-v4.md
.claude/: settings.local.json
examples/: basic_chat.rs  chat_basic.rs  compatible_provider.rs  embed.rs  embed_and_search.rs  generate_video.rs  multi_chat.rs  multimodal.rs  multimodal_image.rs  speech_to_text.rs  streaming.rs  tool_calling.rs  tool_options.rs
src/: client.rs  error.rs  lib.rs  middleware.rs
src/client/: builder.rs  debug.rs  mod.rs
src/provider/: mod.rs  qwen.rs
src/provider/compatible/: mod.rs  stream.rs
src/provider/openai/: audio.rs  chat.rs  embedding.rs  http.rs  image.rs  media.rs  mod.rs  request.rs  response.rs  stream.rs  tests.rs  video.rs
src/provider/qwen/: mod.rs  request.rs  response.rs  stream.rs
src/types/: message.rs  mod.rs  request.rs  response.rs  tool.rs
src/types/content/: message.rs  mod.rs
ufox-arc/: Cargo.toml  arc-prompt-v2.md
ufox-llm/: Cargo.toml
ufox-llm/examples/: embed.rs  generate_image.rs  generate_video.rs  multimodal_image.rs  text_to_speech.rs  tool_calling.rs
ufox-llm/src/: client.rs
ufox-llm/src/provider/: anthropic.rs  doubao.rs  gemini.rs  mod.rs
ufox-llm/src/provider/openai/: audio.rs  embedding.rs  http.rs  image.rs  media.rs  mod.rs  tests.rs  video.rs
ufox-llm/src/provider/openai/chat_completions/: mod.rs  stream.rs
ufox-llm/src/provider/openai/responses/: mod.rs  stream.rs
ufox-llm/src/provider/qwen/: mod.rs
ufox-llm/src/types/: mod.rs
ufox-llm/src/types/content/: media.rs  tool.rs
(+2 files in other folders)
