[package]
name = "ufox-llm"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.32"
thiserror = "2.0.18"
tracing = "0.1.44"
async-trait = "0.1.89"
mime_guess = "2.0.5"
base64 = "0.22.1"
dotenvy = "0.15.7"
bytes = "1.11.1"

[dev-dependencies]
wiremock = "0.6.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
